# authentica

./: .gitignore  ARCHITECTURE.md  BLOG_POST_DRAFT.md  CONTRIBUTING.md  LICENSE  MARKETING_CHECKLIST.md  README.md  SOCIAL_MEDIA_TEMPLATES.md  create_test_image.py  flow_diagram.mmd  flowchart.mmd  pyproject.toml  requirements.txt  test_code.py  test_imports.py
.github/workflows/: ci.yml
examples/: basic_usage.py
src/authentica/: __init__.py  core.py
src/authentica/c2pa/: __init__.py  reader.py
src/authentica/cli/: main.py
src/authentica/forensics/: __init__.py  analyzer.py
src/authentica/metadata/: __init__.py  diff.py  reader.py  thumbnail.py
src/authentica/scanner/: __init__.py  batch.py
src/authentica/utils/: __init__.py  file_type.py  platform.py
src/authentica/watermark/: __init__.py  detector.py
tests/unit/: test_core.py  test_metadata.py
